--- a/README
+++ b/README
@@ -1,9 +1,30 @@
 NAME
-    Acme::CPAN::Testers::UNKNOWN - generate an UNKNOWN test report
+    Acme::CPAN::Testers::FalsePositive - Pretending to be
+    Acme::CPAN::Testers::UNKNOWN
+
+VERSION
+    version 0.03
 
 DESCRIPTION
-    Acme::CPAN::Testers::UNKNOWN generates an "UNKNOWN" test report when run
-    by a CPAN Tester.
+    This module is being used as an experiment to see what happens when an
+    identical distribution name is uploaded to CPAN.
 
-    That's pretty much it, really.
+    There is already:
+
+        BINGOS/Acme-CPAN-Testers-UNKNOWN-0.02.tar.gz
+
+    This will have the same name, a different version and different module
+    (that will still be indexed).
+
+    We'll see how search engines and RT can cope.
+
+AUTHOR
+    David Golden <dagolden@cpan.org>
+
+COPYRIGHT AND LICENSE
+    This software is Copyright (c) 2013 by David Golden.
+
+    This is free software, licensed under:
+
+      The Apache License, Version 2.0, January 2004
 
